# StarterProject

./: CMakeLists.txt  LICENSE  README.md
CommonUtils/: CMakeLists.txt  DataHandler.h  Timer.h
Tests/: CMakeLists.txt
Tests/CommonUtils/: CMakeLists.txt  DataHandlerUt.cpp
src/: main.cpp
